Attempt to fix pattern on mobile

--- a/sass/partials/_styles.sass
+++ b/sass/partials/_styles.sass
@@ -47,7 +47,7 @@
 
 .section-front-header
   margin: 5em 0 10em
-  +breakpoint($break-mobile)
+  +breakpoint($break-tablet)
     margin: 0 auto
     text-align: center
   h1
@@ -119,7 +119,7 @@
 .wrapper-about
   position: relative
   top: -60px
-  margin: 60px 0
+  margin: 62px 0
   padding: 60px 0
   background: $primary
   &:before, &:after
@@ -127,14 +127,14 @@
     left: 0
     content: ''
     width: 100%
-    height: 60px
+    height: 62px
     display: block
   &:before
     top: -60px
-    background: url('../images/pattern-blue.png') top left repeat-x
+    background: transparent url('../images/pattern-blue.png') top left repeat-x
   &:after
     bottom: -60px
-    background: url('../images/pattern-blue-bottom.png') top left repeat-x
+    background: transparent url('../images/pattern-blue-bottom.png') top left repeat-x
   h2
     +breakpoint($break-mobile)
       font-size: 22px
@@ -260,6 +260,8 @@
 
 .header-details
   color: #aaaaaa
+  +breakpoint($break-tablet)
+    color: $black-light
 
 .map
   width: 100%
